@@ -1,3 +1,7 @@
+2004-11-15  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gtktextbuffer.xml (backspace, "tag-table"): Add descriptions.
+
 2004-11-14  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkselectiondata.xml (data_targets_include_image)
